Sep 28, 2018  v.1.5.50
  moved from subversion to github

Aug 20, 2018  v.1.5.49
  OboFileGenerator: fix to skip exporting xrefs without value (to avoid NullPointerException)

Aug 20, 2018  v.1.5.49
  OboFileGenerator: fix to skip exporting xrefs without value (to avoid NullPointerException)

Jul 11, 2018  v.1.5.47
  OboFileGenerator: properly emits synonymtypedef DISPLAY_SYNONYM

Jun 12, 2018  v.1.5.46
  TermStatGenerator: fixed issue with 'child_term_count' and 'parent_term_count'

Jun 4, 2018  v.1.5.45
  OboFileGenerator: fixed potential date conversion issue when running in multi-thread environment

May 31, 2018  v.1.5.44
  RDO ontology can be exported to FTP site

May 30, 2018  v.1.5.43
  PW,CMO,MMO and XCO ontologies can be exported to FTP site (logic and script fixes)

May 29, 2018  v.1.5.42
  Term xrefs are no longer loaded into ONT_XREFs table -- they are loaded as synonyms with type 'xref' instead

May 25, 2018  v.1.5.41
  PW,CMO,MMO and XCO ontologies can be exported to FTP site

Apr 30, 2018  v.1.5.40
  removed CMO,MMO and XCO ontologies from automatic processing; these ontologies can be live edited as of now

Mar 28, 2018  v.1.5.39
  removed PW ontology from automatic processing: PW ontology can be live edited as of now

Jan 3, 2018  v.1.5.38
  OboFileGenerator: fixed for DO+ ontology

Dec 29, 2017  v.1.5.37
  transition from RDO to DO+ ontology

Oct 25, 2017  v.1.5.36
  RDO ontology: synonyms from CTD OBO file (source='OBO') are no longer inserted/deleted for RDO terms

Sep 26, 2017  v.1.5.34
  fixed source of CL ontology
  improved parsing of created_by fields for MP,HP ontologies

Sep 21, 2017  v.1.5.33
  gviewer stats loader: bumped up limit of max-annot-count-per-term from 1000 to 2500

Sep 12, 2017  v.1.5.32
  term stats loader for term with filter: rewritten for performance (100x faster)
  split gviewer stats computation to another file

Sep 5, 2017  v.1.5.31
  term stats loader: optimized for better performance

Sep 1, 2017  v.1.5.30