@@ -13,7 +13,7 @@ cd $APPDIR
 # PATHWAY
 java -Dlog4j.configuration=file://$APPDIR/properties/log4j.properties \
      -Dspring.config=../properties/default_db.xml \
-     -jar OntologyLoad.jar \
+     -jar lib/OntologyLoad.jar \
      -generate_obo_file=PW -process_obsolete_terms -prod_release
 
 scp -p $APPDIR/data/ontology/pathway/*.obo $ONT_RELEASE_DIR/pathway
@@ -23,7 +23,7 @@ echo
 # CLINICAL MEASUREMENT
 java -Dlog4j.configuration=file://$APPDIR/properties/log4j.properties \
      -Dspring.config=../properties/default_db.xml \
-     -jar OntologyLoad.jar \
+     -jar lib/OntologyLoad.jar \
      -generate_obo_file=CMO -process_obsolete_terms -prod_release
 
 scp -p $APPDIR/data/ontology/clinical_measurement/*.obo $ONT_RELEASE_DIR/clinical_measurement
@@ -33,7 +33,7 @@ echo
 # EXPERIMENTAL CONDITION
 java -Dlog4j.configuration=file://$APPDIR/properties/log4j.properties \
      -Dspring.config=../properties/default_db.xml \
-     -jar OntologyLoad.jar \
+     -jar lib/OntologyLoad.jar \
      -generate_obo_file=XCO -process_obsolete_terms -prod_release
 
 scp -p $APPDIR/data/ontology/experimental_condition/*.obo $ONT_RELEASE_DIR/experimental_condition
@@ -43,7 +43,7 @@ echo
 # MEASUREMENT METHOD
 java -Dlog4j.configuration=file://$APPDIR/properties/log4j.properties \
      -Dspring.config=../properties/default_db.xml \
-     -jar OntologyLoad.jar \
+     -jar lib/OntologyLoad.jar \
      -generate_obo_file=MMO -process_obsolete_terms -prod_release
 
 scp -p $APPDIR/data/ontology/measurement_method/*.obo $ONT_RELEASE_DIR/measurement_method
@@ -54,7 +54,7 @@ echo
 # RDO
 java -Dlog4j.configuration=file://$APPDIR/properties/log4j.properties \
      -Dspring.config=../properties/default_db.xml \
-     -jar OntologyLoad.jar \
+     -jar lib/OntologyLoad.jar \
      -generate_obo_file=RDO -prod_release
 
 scp -p $APPDIR/data/ontology/disease/*.obo $ONT_RELEASE_DIR/disease
@@ -65,7 +65,7 @@ echo
 # RS
 java -Dlog4j.configuration=file://$APPDIR/properties/log4j.properties \
      -Dspring.config=../properties/default_db.xml \
-     -jar OntologyLoad.jar \
+     -jar lib/OntologyLoad.jar \
      -generate_obo_file=RS -prod_release
 
 scp -p $APPDIR/data/ontology/rat_strain/*.obo $ONT_RELEASE_DIR/rat_strain
